Fetching works, needs styling and some other additions

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div id="mainDiv">
+        <input class="searchBar">
+        <button class="submitBtn">Search</button>
 
     </div>
 </body>
