All of the basic features are done. Styling and extra features missing

--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,10 @@
 </head>
 <body>
     <div id="mainDiv">
-        <input class="searchBar">
-        <button class="submitBtn">Search</button>
-
+        <div class="search">
+            <input class="searchBar">
+            <button class="submitBtn">Search</button>
+        </div>
     </div>
 </body>
 </html>
